Centralize BadRequestException handling per-resource, add global 500 backstop
/api/v1/resolve and /api/v2/unshorten each mapped the same BadRequestException
to different HTTP outcomes (400 vs 200+success:false), so a global mapper
couldn't own both. UnshortenResource keeps a resource-scoped
@ServerExceptionMapper for its compat contract; ResolveResource now falls
through to a new UnexpectedExceptionMapper, which rebuilds {"error": ...}
from the exception's own status and message when its Response has no entity
(the case for message-only WebApplicationException constructors) and passes
through anything unexpected as a 500 in the same shape.